@@ -285,5 +285,7 @@
 <div id='elementToViewportDimensions' style='display: none'></div>
 <div id="auto_dimensions" style="height:auto"></div>
 
+<iframe src="" id="dummy_iframe"></iframe>
+
 <div id='clonePositionSource'></div>
 <div id='clonePositionTarget'></div>
