@@ -2,6 +2,8 @@
 
 * Allow Form#request pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]
 
+* Ensure Element#readAttribute works properly when accessing type attribute of an iframe. [#118 state:resolved] [Zekid, kangax]
+
 * Ensure Object.isElement and Object.isHash handles "falsy" values properly. [jddalton, kangax]
 
 * Fix exiting test task on INT signal. [Samuel Lebeau]
